...
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/loginImageButton"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:srcCompat="@drawable/loginsignuptextboxaccent" />

    <EditText
        android:id="@+id/login_username_edt"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:background="@null"
        android:fontFamily="@font/aileron_bold"
        android:hint="Enter Username Here"
        android:textColor="#1C2120"
...
        app:layout_constraintBottom_toBottomOf="@+id/usernameSquare"
        app:layout_constraintEnd_toEndOf="@id/usernameSquare"
        app:layout_constraintStart_toStartOf="@+id/usernameSquare"
        app:layout_constraintTop_toTopOf="@+id/usernameSquare"></EditText>

    <EditText
        android:id="@+id/login_password_edt"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:background="@null"
        android:fontFamily="@font/aileron_bold"
        android:hint="Enter Password Here"
        android:inputType="textPassword"
...
        app:layout_constraintEnd_toEndOf="@+id/guidesquare"
        app:layout_constraintStart_toStartOf="@+id/guidesquare"
        app:layout_constraintTop_toBottomOf="@+id/passwordSquare"
        app:srcCompat="@drawable/loginbox" />

    <Button
        android:id="@+id/login_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/aileron_bold"
        android:text="Log in"
        android:textColor="#ffffff"
...
